--- a/assets/app.css
+++ b/assets/app.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pathway+Gothic+One&family=Poppins:wght@100;300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    * {
+        font-family: 'Lato', sans-serif;
+    }
+}
